--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,10 @@
 :root{
     --tomato: hsl(4, 100%, 67%);
     --forGradient: rgba(254, 85, 114, 1);
+
     --errorFormSpan:rgba(225, 121, 112, 1); 
+    --errorFormBackground: rgba(255, 232, 230, 1);
+
     --darkSlateGrey: hsl(234, 29%, 20%);
     --charcoalGrey: hsl(235, 18%, 26%);
     --grey: hsl(231, 7%, 60%);
@@ -137,7 +140,7 @@
     box-shadow: 0px 5px 15px 3px var(--tomato); /* Ajusta los valores según tu preferencia */
 }
       
-.front{display: none;}
+
 
 .back{
     width: 515px;
@@ -147,7 +150,7 @@
     border: none;
     border-radius: 30px;
 
-    display: flex;
+    display: none;
     justify-content: center;
     flex-direction: column;
 }   
@@ -175,7 +178,7 @@
 }
 
 .btn-close{
-    margin: 0 0 55px 65px;
+    margin: 0 0 40px 65px;
     height: 55px;
     width: 375px;
     cursor: pointer;
